aps/deployment_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: suporte
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api 
    spec:
      containers:
      - name: api 
        image: fabricioveronez/pedelogo-catalogo:latest
        ports:
        - containerPort: 80
