aps/api_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: cmattos.net
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: api-service
              port: 
                number: 80
